--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "precommit": "rubocop && annotate",
-    "prepush": "rubocop && rspec --format progress"
+    "prepush": "rubocop && COVERAGE=true rspec --format progress"
   },
   "dependencies": {
     "husky": "^0.14.3"
