--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,8 @@
-FROM ruby:2.5.1-alpine
+FROM ruby:2.5.1
+
+RUN apt-get update && apt-get install -y \
+      postgresql-client \
+      && rm -rf /var/lib/apt/lists/*
 
 RUN mkdir /app
 WORKDIR /app
@@ -7,10 +11,7 @@ WORKDIR /app
 COPY ./Gemfile /app/Gemfile
 COPY ./Gemfile.lock /app/Gemfile.lock
 COPY ./.ruby-version /app/.ruby-version
-
-RUN apk add --no-cache git tzdata postgresql-dev openssh-client g++ make bash && \
-  bundle install --without development test --deployment --jobs 20 --retry 5 && \
-  apk del --no-cache git openssh-client g++ make
+RUN bundle install --jobs 8
 
 COPY ./config /app/config
 COPY ./config.ru /app/config.ru
@@ -19,16 +20,18 @@ COPY ./db /app/db
 # Lol.
 COPY ./app /app/app 
 COPY ./Rakefile /app/Rakefile
+COPY ./Procfile /app/Procfile
+COPY ./Guardfile /app/Guardfile
 COPY ./bin /app/bin
 COPY ./public /app/public
+COPY ./spec /app/spec
+
+COPY ./.rspec /app/.rspec
+COPY ./.rubocop.yml /app/.rubocop.yml
 
 COPY ./files_docker/entrypoint.sh /start.sh
-RUN echo "echo \"PROD DOESN'T WAIT!\"" >> /wait_for_postgres.sh
+COPY ./files_docker/wait_for_postgres.sh /wait_for_postgres.sh
 RUN chmod +x /wait_for_postgres.sh && chmod +x /start.sh
 
-ENV RAILS_ENV production
-ENV RAKE_ENV production
-
-EXPOSE 3000
 ENTRYPOINT [ "/start.sh" ]
-CMD bundle exec rails s -b 0.0.0.0
+CMD rails s
