--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,25 @@ services:
       - POSTGRES_USER=app
       - POSTGRES_PASSWORD=app
   app:
-    build: .
+    build:
+      context: ./
+      dockerfile: ./Dockerfile.dev
     ports:
       - 3001:3000
     depends_on:
       - postgres
     volumes:
       - .:/app
+    environment:
+      - DB_USERNAME=app
+      - DB_PASSWORD=app
+      - DB_HOST=postgres
+  app_prod:
+    build: .
+    ports:
+      - 3000:3000
+    depends_on:
+      - postgres
     environment:
       - DB_USERNAME=app
       - DB_PASSWORD=app
